[project]
name = "superposition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "ipykernel>=6.30.1",
    "nbformat>=5.10.4",
    "plotly>=6.3.0",
    "tqdm>=4.67.1",
    "transformer-lens>=2.16.1",
    "transformers>=4.56.1",
    "vllm>=0.10",
]
